--- a/style.css
+++ b/style.css
@@ -1,27 +1,45 @@
-html {
-  height: 100%;
-  background: black;
+*{
+box-sizing:border-box;
 }
-
-body {
-  height: inherit;
-  margin: 0;
+body{
+margin:0;
+padding:0;
+background-color:#;
 }
-
-img {
-  display: block;
-  width: 100%;
+.ourapp {
+background-color:#4dff4d;
+margin:3px 5px;
+border-radius:5px;
+box-shadow:0px 3px 10px #000;
+display:flex;
 }
-
-.add-button {
-  position: absolute;
-  top: 1px;
-  left: 1px;
+.ourapp .logoimg{
+padding:5px;
+width:50%;
+max-height:150px;
+display:flex;
 }
-
-@media (orientation: landscape) {
-  img {
-    height: 100%;
-    object-fit: cover;
-  }
+.ourapp .logoimg img{
+height:50px;
+width:50px;
+}
+.ourapp .logoimg h1{
+font-size:16px;
+color:#ff0080;
+margin-left:5px;
+padding:6px 0px;
+text-shadow:0px 3px 6px #000 ;
+}
+.ourapp .appbtn{
+margin:14px 5px;
+padding:3px 6px;
+background-color:#ff80d5;
+height:36px;
+width:40%;
+border:1px solid #ffff00;
+border-radius:7px;
+box-shadow:1px 5px 10px #8c8c8c;
+}
+.ourapp .appbtn:hover{
+box-shadow:1px 5px 10px #000000 inset;
 }
