--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ box-sizing:border-box;
 body{
 margin:0;
 padding:0;
-background-color:#;
+background-color:light-grey;
 }
 .ourapp {
 background-color:#4dff4d;
@@ -26,11 +26,11 @@ width:50px;
 .ourapp .logoimg h1{
 font-size:16px;
 color:#ff0080;
-margin-left:5px;
+margin-right:5px;
 padding:6px 0px;
 text-shadow:0px 3px 6px #000 ;
 }
-.ourapp .appbtn{
+.ourapp .add-button{
 margin:14px 5px;
 padding:3px 6px;
 background-color:#ff80d5;
@@ -39,7 +39,8 @@ width:40%;
 border:1px solid #ffff00;
 border-radius:7px;
 box-shadow:1px 5px 10px #8c8c8c;
+align-items:right;
 }
-.ourapp .appbtn:hover{
+.ourapp .add-button:hover{
 box-shadow:1px 5px 10px #000000 inset;
-}
+} 
