--- a/style.css
+++ b/style.css
@@ -4,44 +4,43 @@ box-sizing:border-box;
 body{
 margin:0;
 padding:0;
-background-color:light-grey;
+background-color:black;
 }
 .ourapp {
 background-color:#4dff4d;
-margin:3px 5px;
+margin:2px 2px 0px 2px;
 border-radius:5px;
 box-shadow:0px 3px 10px #000;
-display:flex;
+padding:0;
 }
 .ourapp .logoimg{
 padding:5px;
 width:50%;
-max-height:150px;
+max-height:140px;
 display:flex;
-margin-left:25%;
+float:right;
 }
 .ourapp .logoimg img{
-height:50px;
-width:50px;
+height:35px;
+width:35px;
 }
 .ourapp .logoimg h1{
-font-size:16px;
+font-size:14px;
 color:#ff0080;
 margin-right:5px;
-padding:6px 0px;
+padding:0px;
 text-shadow:0px 3px 6px #000 ;
 }
-.ourapp .add-button{
-margin:14px 5px;
+.ourapp .appbtn{
+margin:3px 2px;
 padding:3px 6px;
 background-color:#ff80d5;
-height:36px;
+height:34px;
 width:40%;
 border:1px solid #ffff00;
 border-radius:7px;
 box-shadow:1px 5px 10px #8c8c8c;
-align-items:right;
 }
-.ourapp .add-button:hover{
+.ourapp .appbtn:hover{
 box-shadow:1px 5px 10px #000000 inset;
-} 
+}
