--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ margin-right:5px;
 padding:0px;
 text-shadow:0px 3px 6px #000 ;
 }
-.ourapp .appbtn{
+.ourapp .add-button{
 margin:3px 2px;
 padding:3px 6px;
 background-color:#ff80d5;
@@ -41,6 +41,6 @@ border:1px solid #ffff00;
 border-radius:7px;
 box-shadow:1px 5px 10px #8c8c8c;
 }
-.ourapp .appbtn:hover{
+.ourapp .add-button:hover{
 box-shadow:1px 5px 10px #000000 inset;
 }
